Refactored Settings Page
Moved some monkeys

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/App.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/App.xaml
@@ -144,6 +144,11 @@
                 <Setter Property="BackgroundColor" Value="{StaticResource WhiteLight}" />
             </Style>
 
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource SkyBlueLight}" />
+                <Setter Property="TextColor" Value="White" />
+            </Style>
+
             <!--  Margins  -->
 
 
