When card swiped, there is some frame around it which cuts some of the action buttons.

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
@@ -61,7 +61,7 @@
             </SwipeItemView>
         </SwipeItems>
     </SwipeView.RightItems>
-    <ContentView BackgroundColor="{StaticResource WhiteLight}">
+    <ContentView >
         <rv:MaterialFrame
             Margin="{StaticResource CardMargin}"
             Padding="0"
