--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AboutPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AboutPage.xaml
@@ -8,11 +8,13 @@
     xmlns:rv="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
     xmlns:viewmodels="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     xmlns:views="clr-namespace:WeeklyXamarin.Mobile.Views"
+    xmlns:fontAwesome="clr-namespace:FontAwesome"
     xmlns:vm="clr-namespace:WeeklyXamarin.Core.ViewModels;assembly=WeeklyXamarin.Core"
     xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     x:Name="rootPage"
     Title="{Binding Title}"
     x:TypeArguments="viewmodels:AboutViewModel"
+    x:DataType="viewmodels:AboutViewModel"
     mc:Ignorable="d">
 
     <ContentPage.Resources>
@@ -22,6 +24,89 @@
             <Style x:Key="Header" TargetType="Label">
                 <Setter Property="FontSize" Value="14" />
                 <Setter Property="FontAttributes" Value="Bold" />
+            </Style>
+
+            <Color x:Key="LightRadioButtonColor">#F3F2F1</Color>
+            <Color x:Key="DarkRadioButtonColor">#9B9A99</Color>
+
+            <ControlTemplate x:Key="ThemeRadioTemplate">
+                <Frame
+                    Padding="0"
+                    BackgroundColor="{AppThemeBinding Dark={StaticResource DarkRadioButtonColor},
+                                                      Light={StaticResource LightRadioButtonColor}}"
+                    BorderColor="{AppThemeBinding Dark={StaticResource DarkRadioButtonColor},
+                                                  Light={StaticResource LightRadioButtonColor}}"
+                    CornerRadius="8"
+                    HasShadow="{OnPlatform iOS=false,
+                                           Android=true}"
+                    HeightRequest="80"
+                    HorizontalOptions="Start"
+                    VerticalOptions="Start"
+                    WidthRequest="80">
+                    <Grid Margin="4" WidthRequest="80">
+                        <Grid
+                            HeightRequest="20"
+                            HorizontalOptions="End"
+                            VerticalOptions="Start"
+                            WidthRequest="20">
+                            <Ellipse
+                                x:Name="FillUncheck"
+                                Fill="White"
+                                HeightRequest="18"
+                                HorizontalOptions="Center"
+                                Stroke="#2E2545"
+                                StrokeThickness="2"
+                                VerticalOptions="Center"
+                                WidthRequest="18" />
+                            <Ellipse
+                                x:Name="FillCheck"
+                                Fill="White"
+                                HeightRequest="18"
+                                HorizontalOptions="Center"
+                                Stroke="#2196F3"
+                                StrokeThickness="2"
+                                VerticalOptions="Center"
+                                WidthRequest="18" />
+                            <Ellipse
+                                x:Name="Check"
+                                BackgroundColor="Transparent"
+                                Fill="#2196F3"
+                                HeightRequest="10"
+                                HorizontalOptions="Center"
+                                Stroke="#2196F3"
+                                StrokeThickness="0"
+                                VerticalOptions="Center"
+                                WidthRequest="10" />
+                        </Grid>
+                        <ContentPresenter />
+                    </Grid>
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CheckedStates">
+                                <VisualState x:Name="Checked">
+                                    <VisualState.Setters>
+                                        <Setter Property="BorderColor" Value="#2196F3" />
+                                        <Setter TargetName="Check" Property="Opacity" Value="1" />
+                                        <Setter TargetName="FillCheck" Property="Opacity" Value="1" />
+                                        <Setter TargetName="FillUncheck" Property="Opacity" Value="0" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Unchecked">
+                                    <VisualState.Setters>
+                                        <Setter Property="BorderColor" Value="#F3F2F1" />
+                                        <Setter TargetName="Check" Property="Opacity" Value="0" />
+                                        <Setter TargetName="FillCheck" Property="Opacity" Value="0" />
+                                        <Setter TargetName="FillUncheck" Property="Opacity" Value="1" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
+                </Frame>
+            </ControlTemplate>
+
+            <Style TargetType="RadioButton">
+                <Setter Property="ControlTemplate" Value="{StaticResource ThemeRadioTemplate}" />
             </Style>
 
         </ResourceDictionary>
@@ -41,6 +126,8 @@
                         <Switch
                             Grid.Column="1"
                             HorizontalOptions="End"
+                            OnColor="{AppThemeBinding Dark={StaticResource LightRadioButtonColor}, Light={StaticResource DarkRadioButtonColor}}"
+                            ThumbColor="{AppThemeBinding Light={StaticResource NavigationPrimaryLight}, Dark={StaticResource NavigationPrimaryDark}}"
                             IsToggled="{Binding OpenLinksInApp}" />
                     </Grid>
                     <Grid ColumnDefinitions="*,*">
@@ -51,7 +138,60 @@
                         <Switch
                             Grid.Column="1"
                             HorizontalOptions="End"
+                            OnColor="{AppThemeBinding Dark={StaticResource LightRadioButtonColor}, Light={StaticResource DarkRadioButtonColor}}"
+                            ThumbColor="{AppThemeBinding Light={StaticResource NavigationPrimaryLight}, Dark={StaticResource NavigationPrimaryDark}}"
                             IsToggled="{Binding Analytics}" />
+                    </Grid>
+                    <Grid
+                        ColumnDefinitions="*,Auto,Auto,Auto,*"
+                        ColumnSpacing="10"
+                        RadioButtonGroup.GroupName="ThemeGroup"
+                        RowDefinitions="Auto,Auto"
+                        RowSpacing="10">
+                        <RadioButton
+                            x:Name="RadioButtonSystem"
+                            IsChecked="{Binding UseSystem}"
+                            Grid.Column="1"
+                            Value="System">
+                            <RadioButton.Content>
+                                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Image Scale="0.75" Source="{FontImage FontFamily=FAS, Glyph={x:Static fontAwesome:FontAwesomeIcons.UserCog}, Color=#323130}" />
+                                    <Label
+                                        FontSize="Small"
+                                        Text="System"
+                                        TextColor="#323130" />
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                        <RadioButton
+                            x:Name="RadioButtonLight"
+                            Grid.Column="2"
+                            IsChecked="{Binding UseLight}"
+                            Value="Light">
+                            <RadioButton.Content>
+                                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Image Scale="0.75" Source="{FontImage FontFamily=FAS, Glyph={x:Static fontAwesome:FontAwesomeIcons.Sun}, Color=#323130}" />
+                                    <Label
+                                        FontSize="Small"
+                                        Text="Light"
+                                        TextColor="#323130" />
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                        <RadioButton
+                            Grid.Column="3"
+                            IsChecked="{Binding UseDark}"
+                            Value="Dark">
+                            <RadioButton.Content>
+                                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Image Scale="0.75" Source="{FontImage FontFamily=FAS, Glyph={x:Static fontAwesome:FontAwesomeIcons.Moon}, Color=#323130}" />
+                                    <Label
+                                        FontSize="Small"
+                                        Text="Dark"
+                                        TextColor="#323130" />
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
                     </Grid>
                 </StackLayout>
             </rv:MaterialFrame>
@@ -67,7 +207,7 @@
                 IsClippedToBounds="True">
                 <StackLayout BindableLayout.ItemsSource="{Binding Libraries}" Spacing="20">
                     <BindableLayout.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate x:DataType="models:LinkInfo">
                             <Label Text="{Binding Text}">
                                 <Label.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding BindingContext.OpenUrlCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding Url}" />
@@ -89,7 +229,7 @@
                 IsClippedToBounds="True">
                 <StackLayout BindableLayout.ItemsSource="{Binding AboutLinks}" Spacing="20">
                     <BindableLayout.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate x:DataType="models:LinkInfo">
                             <Label Text="{Binding Text}">
                                 <Label.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding BindingContext.OpenUrlCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding Url}" />
