Search based on the category from the article card

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/AppShell.xaml
@@ -50,7 +50,7 @@
             </ShellContent>
         </Tab>
         <Tab Title="Search" Icon="tab_search.png">
-            <ShellContent>
+            <ShellContent Route="search">
                 <ShellContent.ContentTemplate>
                     <DataTemplate>
                         <views:SearchPage />
