--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/ArticleDataTemplate.xaml
@@ -150,7 +150,14 @@
                     <Label
                         Style="{StaticResource CategoryLozenge}"
                         Text="{Binding Category}"
-                        TextColor="White" />
+                        TextColor="White">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer
+                                Command="{Binding SearchCategoryCommand, Source={RelativeSource AncestorType={x:Type viewmodels:ArticleListViewModelBase}, Mode=FindAncestorBindingContext}}"
+                                CommandParameter="{Binding .}"
+                                NumberOfTapsRequired="1" />
+                        </Label.GestureRecognizers>
+                    </Label>
                 </rv:MaterialFrame>
 
                 <Grid.GestureRecognizers>
