--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/SearchPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/SearchPage.xaml
@@ -3,6 +3,7 @@
     x:Class="WeeklyXamarin.Mobile.Views.SearchPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:FontAwesome"
     xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
     xmlns:models="clr-namespace:WeeklyXamarin.Core.Models;assembly=WeeklyXamarin.Core"
     xmlns:rv="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame"
@@ -14,7 +15,7 @@
     x:DataType="viewmodels:SearchViewModel"
     x:TypeArguments="viewmodels:SearchViewModel">
 
-    <Grid RowDefinitions="Auto,*">
+    <Grid RowDefinitions="Auto,Auto,*">
         <Entry
             Margin="20,20,20,0"
             ClearButtonVisibility="WhileEditing"
@@ -31,7 +32,72 @@
             </Entry.Behaviors>
         </Entry>
 
-        <Grid Grid.Row="1">
+        <rv:MaterialFrame
+            Grid.Row="1"
+            Margin="20"
+            Padding="5"
+            BackgroundColor="Transparent"
+            HasShadow="True">
+            <xct:Expander IsExpanded="{Binding ShowCategory}">
+                <xct:Expander.Header>
+                    <Grid>
+                        <Label
+                            Padding="0,10"
+                            Style="{StaticResource SectionTitle}"
+                            Text="Categories" />
+                        <Image
+                            HorizontalOptions="End"
+                            Source="{FontImage Glyph={x:Static fa:FontAwesomeIcons.ChevronCircleDown},
+                                               FontFamily=FAS,
+                                               Size=24,
+                                               Color={StaticResource SkyBlueLight}}"
+                            VerticalOptions="Center">
+                            <Image.Triggers>
+                                <DataTrigger
+                                    Binding="{Binding Source={RelativeSource AncestorType={x:Type xct:Expander}}, Path=IsExpanded}"
+                                    TargetType="Image"
+                                    Value="True">
+                                    <Setter Property="Source" Value="{FontImage Glyph={x:Static fa:FontAwesomeIcons.ChevronCircleUp}, FontFamily=FAS, Size=24, Color={StaticResource Key=SkyBlueLight}}" />
+                                </DataTrigger>
+                            </Image.Triggers>
+                        </Image>
+                    </Grid>
+                </xct:Expander.Header>
+                <ScrollView>
+                    <FlexLayout
+                        Margin="0,10"
+                        Padding="5,0"
+                        AlignContent="Stretch"
+                        AlignItems="Center"
+                        BindableLayout.ItemsSource="{Binding Categories}"
+                        JustifyContent="Center"
+                        Wrap="Wrap">
+                        <BindableLayout.ItemTemplate>
+                            <DataTemplate x:DataType="{x:Type models:Category}">
+                                <Frame
+                                    Margin="5"
+                                    Padding="0"
+                                    BackgroundColor="Transparent"
+                                    BorderColor="{Binding Name, Converter={StaticResource categoryToColorConverter}}"
+                                    CornerRadius="10"
+                                    HasShadow="True">
+                                    <Label
+                                        Padding="12"
+                                        Style="{StaticResource SearchCategory}"
+                                        Text="{Binding Name}"
+                                        TextColor="{Binding Name, Converter={StaticResource categoryToColorConverter}}">
+                                        <Label.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding BindingContext.SelectCategoryCommand, Source={x:Reference rootPage}}" CommandParameter="{Binding Name}" />
+                                        </Label.GestureRecognizers>
+                                    </Label>
+                                </Frame>
+                            </DataTemplate>
+                        </BindableLayout.ItemTemplate>
+                    </FlexLayout>
+                </ScrollView>
+            </xct:Expander>
+        </rv:MaterialFrame>
+        <Grid Grid.Row="2">
             <CollectionView Header="{Binding .}" ItemsSource="{Binding Articles}">
                 <CollectionView.HeaderTemplate>
                     <DataTemplate>
