Added PR from Grimorde, Thanks!

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AcknowledgementsPage.xaml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/Views/AcknowledgementsPage.xaml
@@ -12,7 +12,7 @@
 
 
 
-    <Grid RowDefinitions="60, *">
+    <Grid RowDefinitions="Auto, *">
         <Label
             Margin="20,20,20,0"
             HorizontalOptions="Center"
